style.css
/* ... */
.block-wrapper-3 {
  display: flex;
  flex-direction: column;
  width: 60%;
  height: 100%;
}

.block-wrapper-3 > p:last-of-type {
  margin-bottom: 2rem;
}

.container-services {
  display: flex;
  flex-direction: column;
  margin-top: 160px;
}

.services-wrapper {
  display: flex;
  flex-direction: column;
  align-self: flex-start;
  justify-content: space-between;
}

.services-headline-wrapper > p:first-of-type {
  padding-top: 24px;
}

.services-h2 {
  line-height: 1.1;
  margin-bottom: 1.5rem;
}

.services-dropdown {
  display: flex;
  flex-direction: column;
  width: 100%;
  color: #000;
  font-size: clamp(
    1.125rem,
    1.0340909090909092rem + 0.45454545454545453vw,
    1.375rem
  );
  line-height: 1.78;
}

.services-dropdown.dark {
  color: #fff;
}

.services-dropdown-item {
  display: flex;
  align-items: flex-start;
  gap: 2rem;
  width: 100%;
  border-bottom: 2px solid rgba(0, 0, 0, 0.15);
  transition: all 0.7s cubic-bezier(0.16, 1, 0.3, 1);
}

.services-dropdown-item.dark {
  border-bottom: 2px solid rgba(255, 255, 255, 0.15);
}

.services-title {
  width: 50%;
  display: flex;
  align-items: center;
  justify-content: left;
  text-wrap: nowrap;
  padding: 1rem 0;
  margin: 0;
  /* font-size: 1.75rem; */
  font-size: clamp(1.75rem, 1.3796296296296298rem + 1.8518518518518516vw, 3rem);
  font-weight: 600;
  transition: 0.7s cubic-bezier(0.16, 1, 0.3, 1);
  cursor: pointer;
}

.services-title-span {
  margin-right: 1rem;
}

.scroll-down {
  flex-shrink: 0;
  width: 16px;
  height: 16px;
  background-color: var(--purple-shade);
  border-radius: 0.125rem;
  /* margin-right: 4px; */
  margin-right: 1.5rem;
  margin-left: 4px;
  transform: rotate(45deg);
  transition: all 0.7s cubic-bezier(0.16, 1, 0.3, 1);
  box-shadow: 0px 0px 0 0 var(--purple-shade);
}

.scroll-down.dark {
  background-color: var(--purple-shade-dk);
  box-shadow: 0px 0px 0 0 var(--purple-shade-dk);
}

.services-text {
  width: 50%;
  display: grid;
  grid-template-rows: 0fr;
  background-color: var(--bg-light1);
  /* max-height: 0; */
  margin: 1rem 0;
  border-radius: 1.125rem;
  overflow: hidden;
  opacity: 0;
  transition: all 1s cubic-bezier(0.16, 1, 0.3, 1);
}

.services-text > div {
  overflow: hidden;
}

.services-text div > p {
  /* padding-bottom: 24px; */
  padding: 2rem;
  margin: 0;
}

.services-title.opened + .services-text {
  grid-template-rows: 1fr;
  opacity: 1;
}

.services-title:hover > .scroll-down {
  background-color: var(--accent-color);
}

.services-title.opened > .scroll-down {
  background-color: var(--accent-color);
  box-shadow: 6px 6px 0 0 var(--purple-shade);
}

.services-title:hover > .scroll-down.dark {
  background-color: var(--accent-color-dk);
}

.services-title.opened > .scroll-down.dark {
  background-color: var(--accent-color-dk);
  box-shadow: 6px 6px 0 0 var(--purple-shade-dk);
}

.section-projects {
  background-color: #fff;
  transition: background-color 0.4s linear;
  position: relative;
  overflow: hidden;
}

.section-projects.dark {
  background-color: var(--bg-night1);
}

.container3 {
  width: 100%;
  padding: 100px 0 100px 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.projects-container {
  display: flex;
  flex-direction: column;
  row-gap: 4rem;
  column-gap: 4rem;
}

.block-wrapper-4 {
  width: 65%;
  display: grid;
  grid-template-columns: repeat(2, minmax(auto, 1fr));
  align-items: flex-start;
  height: fit-content;
  /* padding: 60px; */
  position: relative;
  overflow: hidden;
  background-color: var(--bg-light2);
  border-radius: 0.5rem;
  /* gap: 2rem; */
  box-shadow: 0px 8px 0 0 var(--purple-shade);
  transition: background-color 0.3s linear, box-shadow 0.3s linear;
}

.block-wrapper-4.dark {
  background-color: var(--bg-night2);
  box-shadow: 0px 8px 0 0 var(--purple-shade-dk);
}

.projects-work {
  display: flex;
  align-items: flex-start;
  justify-content: space-between;
  gap: 2rem;
}

.projects-work-pagination {
  font-family: "Outfit", sans-serif;
  font-size: 12vw;
  line-height: 1;
}

.project-img-wrapper {
  grid-column: 1 / -1;
  position: relative;
  width: 100%;
  overflow: hidden;
}

.project-img-wrapper:hover > .project-img {
  scale: 1.14;
}

.project-img {
  width: 100%;
  max-width: 100%;
  height: auto;
  object-fit: cover;
  scale: 1.005;
  transition: scale 0.9s cubic-bezier(0.16, 1, 0.3, 1);
}

.project-description {
  display: grid;
  grid-column: 1 / -1;
  grid-template-columns: repeat(2, minmax(auto, 1fr));
  align-items: center;
  height: fit-content;
  padding: 32px;
  position: relative;
  gap: 2rem;
}

.project-title-wrapper {
  grid-column: span 1;
  display: flex;
  flex-direction: column;
  align-items: start;
  width: 100%;
}

.mini-cards-div {
  display: flex;
  justify-content: left;
  flex-wrap: wrap;
  gap: 0.25rem;
}

.mini-card {
  padding: 0.25rem 0.7rem;
  border-radius: 0.375rem;
  background-color: var(--bg-night2);
  color: #fff;
  cursor: default;
  transition: all 0.4s linear;
}

.mini-card.dark {
  background-color: var(--bg-light2);
  color: #000;
}

.project-button-wrapper {
  display: flex;
  align-items: center;
  justify-content: right;
  grid-column: span 1;
  gap: 20px;
}

.disable,
.disable.dark,
.disable:hover,
.disable.dark:hover {
  pointer-events: none;
  cursor: default;
  background-color: #888;
}

.section-contact {
  background-color: #ffffff;
  transition: background-color 0.4s linear;
  border-bottom-left-radius: 4rem;
  border-bottom-right-radius: 4rem;
  position: relative;
}

.section-contact.dark {
  background-color: var(--bg-night1);
}

.container4 {
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 100%;
  padding: 100px 0;
}

.container4-content {
  display: flex;
  align-items: center;
  gap: clamp(2rem, -0.2921013412816693rem + 4.769001490312966vw, 4rem);
}

.block-wrapper-6 {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  justify-self: center;
  width: 60%;
  text-overflow: clip;
}
/* ... */

